# sknext

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  PUBLISHING_CHECKLIST.md  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
.specify/memory/: constitution.md
specs/001-task-status-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-status-viewer/checklists/: requirements.md
specs/001-task-status-viewer/contracts/: cli.md
specs/002-detect-repo-root/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-detect-repo-root/checklists/: requirements.md
specs/002-detect-repo-root/contracts/: cli.md
src/sknext/: __main__.py  cli.py  constants.py  discovery.py  formatter.py  models.py  parser.py
src/task_viewer/: __init__.py
tests/fixtures/: malformed_tasks.md  nested_tasks.md  sample_tasks.md
tests/integration/: test_cli.py
tests/unit/: test_constants.py  test_discovery.py  test_formatter.py  test_models.py  test_parser.py
